# x402-4mica

./: .env  .env.example  .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml
examples/: .env.example  README.md  facilitator_rust.rs  mock_paid_api.py  requirements.txt  x402_facilitator_client.py  x402_flow.rs
examples/buildbear/: .env.example  agent.py  article.md  requirements.txt  server.py
examples/python_client/: client.py  requirements.txt
examples/rust_client/: main.rs
examples/server/: __init__.py  mock_paid_api.py
examples/ts_client/: client.ts  package-lock.json  package.json  tsconfig.json
skills/fourmica-x402/: SKILL.md
skills/fourmica-x402/agents/: openai.yaml
skills/fourmica-x402/references/: facilitator.md  sdk-python.md  sdk-rust.md  sdk-typescript.md
src/: auth.rs  config.rs  exact.rs  issuer.rs  main.rs  request_ids.rs  telemetry.rs  verifier.rs
src/server/: handlers.rs  mod.rs  model.rs  state.rs  tests.rs
tests/: e2e.rs
