[package]
name = "x402-4mica"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
rpc-4mica = { version = "0.5.0" }
sdk-4mica = { version = "0.5.0" }
axum = { version = "0.8.8", features = ["macros", "json"] }
base64 = "0.22"
dotenvy = "0.15"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0.18"
tokio = { version = "1.49.0", features = [
    "macros",
    "rt-multi-thread",
    "signal",
    "sync",
] }
tower-http = { version = "0.6.6", features = ["trace"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
reqwest = { version = "0.13.1", default-features = false, features = ["json", "default-tls"] }
hex = "0.4"
async-trait = "0.1"
x402-rs = "0.12.5"
alloy = "1.5.2"

[dev-dependencies]
tower = { version = "0.5.3", features = ["util"] }
serial_test = "3.3.1"
crypto_4mica = { package = "crypto-4mica", version = "0.5.0" }
