[workspace]
resolver = "2"
members = [".", "packages/rust/x402"]

[workspace.package]
edition = "2024"

[workspace.dependencies]
anyhow = "1.0.101"
async-trait = "0.1.89"
axum = "0.8.8"
dotenvy = "0.15.7"
reqwest = { version = "0.13.1", default-features = false }
rpc-4mica = "0.5.0"
serde = "1.0.228"
serde_json = "1.0.149"
tokio = "1.49.0"
tower = "0.5.3"

[package]
name = "x402-4mica-facilitator"
version = "0.1.0"
edition.workspace = true

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
axum = { workspace = true, features = ["macros", "json"] }
dotenvy.workspace = true
reqwest = { workspace = true, default-features = false, features = [
    "json",
    "default-tls",
] }
rpc-4mica.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
tokio = { workspace = true, features = [
    "macros",
    "rt-multi-thread",
    "signal",
    "sync",
] }

sdk-4mica = { version = "0.5.0" }
base64 = "0.22"
thiserror = "2.0.18"
tower-http = { version = "0.6.6", features = ["trace"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
hex = "0.4"
x402-rs = "0.12.5"
alloy = "1.5.2"

[dev-dependencies]
tower = { workspace = true, features = ["util"] }
serial_test = "3.3.1"
crypto_4mica = { package = "crypto-4mica", version = "0.5.0" }
